unpackaged/main/default/objects/Asset_Builder_Async_Job__e/Asset_Builder_Async_Job__e.object-meta.xml
<CustomObject>
    <label>Asset Builder Async Job</label>
    <pluralLabel>Asset Builder Async Jobs</pluralLabel>
</CustomObject>