unpackaged/main/default/objects/Asset_Builder_Async_Job__e/fields/Bast_Asset_Template_Ids__c.field-meta.xml
<CustomField>
    <fullName>Bast_Asset_Template_Ids__c</fullName>
    <label>Bast Asset Template Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>