unpackaged/main/default/objects/Asset_Builder_Async_Job__e/fields/Last_Process_Initiated_DT__c.field-meta.xml
<CustomField>
    <fullName>Last_Process_Initiated_DT__c</fullName>
    <label>Last Process Initiated DT</label>
    <type>DateTime</type>
</CustomField>