unpackaged/main/default/objects/Asset_Builder_Async_Job__e/fields/Plant_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset_Id__c</fullName>
    <description>Also reference as Account Plant.</description>
    <label>Plant Asset Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>