unpackaged/main/default/objects/Asset_Builder_Async_Job__e/fields/Plant_Asset_Prompt_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset_Prompt_Detail_Id__c</fullName>
    <label>Plant Asset Prompt Detail Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>