unpackaged/main/default/objects/Asset_Builder_Async_Job__e/fields/Prompt_Information_Ids__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Information_Ids__c</fullName>
    <label>Prompt Information Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>