unpackaged/main/default/objects/Asset_Builder_Async_Job__e/fields/Site_Metadata_Ids__c.field-meta.xml
<CustomField>
    <fullName>Site_Metadata_Ids__c</fullName>
    <label>Site Metadata Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>